tests/errors/se_mixtabspace.pyx
def f():
 a = b # space space
	c = d # tab
_ERRORS = u"""
3:0: Mixed use of tabs and spaces
"""
